[metadata]
name = google-form-prefiller
version = 0.0.2
author = Christian Segundo
author_email = chn2guevara@gmail.com
description = Prefill Google forms from a YAML configuration file
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/someone-stole-my-name/google-form-prefiller
project_urls =
    Bug Tracker = https://github.com/someone-stole-my-name/google-form-prefiller/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options.entry_points]
console_scripts =
  google-form-prefiller=google_form_prefiller.google_form_prefiller:main

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pyyaml

[options.packages.find]
where = src
